--- a/public/profile/side_projects.json
+++ b/public/profile/side_projects.json
@@ -26,7 +26,7 @@
                     "href": "https://winter-thrill-5e3.notion.site/eb47fe0d35f24fb78cf623e6c7bad097?pvs=4"
                 },
                 {
-                    "text": "DemoLibv",
+                    "text": "DemoLive",
                     "href": "https://ucopi-front.vercel.app/"
                 }
             ],
